--- a/calf-modguis.lv2/modgui/Saturator/icon-calf-saturator.css
+++ b/calf-modguis.lv2/modgui/Saturator/icon-calf-saturator.css
@@ -24,7 +24,7 @@
     top: 13px;
 }
 .calf .bar-top .off-or-on-calf {
-    background-image: url(/resources/toggle2_silver.png{{ns}});
+    background-image: url(/resources/toggle2_silver.png{{{ns}}});
     background-size: 46px 62px;
     cursor: pointer;
     height: 31px;
@@ -340,7 +340,7 @@
     right: 0
 }
 .calf-saturator .display {
-    background: url(/resources/combo-sm.png{{ns}});
+    background: url(/resources/combo-sm.png{{{ns}}});
     top: 181px;
     background-size: 50px auto;
     height: 28px;
@@ -360,7 +360,7 @@
     position: absolute;
 }
 .calf-saturator .slider-horiz {
-    background: url(/resources/sliders-vert-disable2.png{{ns}});
+    background: url(/resources/sliders-vert-disable2.png{{{ns}}});
     background-size: auto 152px;
     height: 152px;
     position: absolute;
