--- a/plugins-fixed/b_synth/modgui/stylesheet-setbfree-dsp-tonewheel-organ.css
+++ b/plugins-fixed/b_synth/modgui/stylesheet-setbfree-dsp-tonewheel-organ.css
@@ -37,6 +37,14 @@
     width:421px;
 }
 
+/* PORTS
+================================================ */
+
+.mod-pedal-boxy{{{cns}}}.mod-boxy50 .mod-pedal-input,
+.mod-pedal-boxy{{{cns}}}.mod-boxy50 .mod-pedal-output {
+    top: 66px;
+}
+
 /* = PLUGIN'S AUTHOR
 ================================================ */
 .mod-pedal-boxy{{{cns}}} .mod-plugin-brand {
@@ -67,6 +75,10 @@
 
 .mod-pedal-boxy{{{cns}}}.mod-boxy50 .mod-plugin-brand {
   top:16px;
+}
+
+.mod-pedal-boxy{{{cns}}}.mod-one-footswitch-presets .mod-plugin-brand {
+  top:12px;
 }
 
 
@@ -122,6 +134,10 @@
   top:105px;
 }
 
+.mod-pedal-boxy{{{cns}}}.mod-one-footswitch-presets .mod-light {
+  top:120px;
+}
+
 
 /* = FOOTSWITCH
 ================================================ */
@@ -154,6 +170,10 @@
     top:140px;
 }
 
+.mod-pedal-boxy{{{cns}}}.mod-one-footswitch-presets .mod-footswitch {
+    top:170px;
+}
+
 
 /* = KNOBS
 ================================================ */
@@ -165,6 +185,15 @@
 }
 .mod-pedal-boxy{{{cns}}} .top {
     margin-top:0px !important;
+}
+
+.mod-pedal-boxy{{{cns}}}.mod-one-footswitch-presets .mod-control-group {
+    margin:10px !important;
+    top:75px;
+}
+
+.mod-pedal-boxy{{{cns}}}.mod-one-footswitch-presets .mod-control-group > select {
+    width:100%;
 }
 
 .mod-pedal-boxy{{{cns}}} .mod-control-group .mod-knob {
