--- a/plugins-fixed/tap-eqbw.lv2/modgui/tap-equalizerbw.css
+++ b/plugins-fixed/tap-eqbw.lv2/modgui/tap-equalizerbw.css
@@ -4,20 +4,22 @@
     background-position: center center;
     background-repeat: no-repeat;
     color: black;
-    height: 444px;
+    height: 442px;
     padding: 0;
-    width: 618px;
+    width: 616px;
+    border-radius: 21px;
+    position: absolute;
 }
 /* BRAND */
 .mod-tap-equalizer-bw .mod-tap-equalizer-bw-brand {
     background: rgba(0,0,0,0.9);
     border-radius: 8px;
-    bottom: 60px;
+    bottom: 55px;
     color: white;
-    left: 335px;
+    left: 345px;
     padding: 13px 20px;
     position: absolute;
-    right: 46px;
+    right: 36px;
     text-align: center;
 }
 .mod-tap-equalizer-bw .mod-plugin-author {
@@ -118,14 +120,15 @@
     background-repeat:no-repeat;
     background-size:auto 132px;
     bottom: 52px;
-    left: 165px;
+    left: 0px;
+    right: 0px;
     cursor:pointer;
     height:66px;
     width: 66px;
-    margin: 0 auto;
-    position:absolute;
+    margin: auto;
+    position:absolute !important;
 }
-.mod-tap-equalizer-bw .mod-footswitch .mod-footswitch.on {
+.mod-tap-equalizer-bw .mod-footswitch.on {
     background-position-y: top !important
 }
 /* LIGHT */
