--- a/plugins-fixed/fil4.lv2/modgui/stylesheet-x42-eq.css
+++ b/plugins-fixed/fil4.lv2/modgui/stylesheet-x42-eq.css
@@ -30,11 +30,11 @@
 }
 
 .mod-pedal-boxy{{{cns}}}.mod-x42-eq .x42-brand h1 {
-    font-family:"Nexa";
     font-size:28px;
     padding:0;
     margin:0;
     color:#aaa;
+    -webkit-transform: rotate(270deg);
     transform: rotate(270deg);
     text-shadow: 0 2px 2px #111;
 }
