--- a/plugins/delayorama-swh.lv2/modgui/delayorama.css
+++ b/plugins/delayorama-swh.lv2/modgui/delayorama.css
@@ -31,6 +31,7 @@
         width: 565px;
         height: 456px;
         border-radius: 0;
+        position: absolute;
     }
      .swh-delayorama .mod-control-group {
       top: 0;
@@ -40,22 +41,22 @@
       position: relative;
      }
     .swh-delayorama .mod-control-group#wet {
-      left: 355px;
-      top: 365px;
+      left: 361px;
+      top: 366px;
       position: absolute;
       width: 70px !important;
       height: 70px !important;
     }
 
     .swh-delayorama .mod-control-group.group1 {
-        margin-top: 119px;
+        margin-top: 121px;
         margin-left: 24px;
         float: left;
         width: 217px !important;
     }
     .swh-delayorama .mod-control-group.group2 {
-        margin-top: 119px;
-        margin-left: 23px;
+        margin-top: 121px;
+        margin-left: 29px;
         float: left;
         width: 255px !important;
     }
@@ -85,9 +86,6 @@
       cursor: pointer;
       position:relative;
       overflow:hidden;
-    }
-    .swh-delayorama .mod-light {
-        top: 390px;
     }
     .swh-delayorama .mod-slider {
       position: relative;
