--- a/plugins-fixed/fat1.lv2/modgui/x42-autotune.css
+++ b/plugins-fixed/fat1.lv2/modgui/x42-autotune.css
@@ -4,57 +4,49 @@
 
 /* = CONTAINER
 ================================================ */
-.mod-pedal-boxy{{{cns}}} {
+.x42-autotune{{{cns}}} {
+    background-image:url(/resources/x42-fat1.png{{{ns}}});
     background-position:center center;
     background-repeat:no-repeat;
-    background-size:230px 431px;
+    background-size:421px 431px;
+    border-radius: 21px;
     height:431px;
     position:absolute;
-    width:230px;
-    border-radius: 21px;
-}
-
-.mod-pedal-boxy{{{cns}}}.x42-autotune {
-    background-image:url(/resources/tribal1.png{{{ns}}});
-    background-size:421px 431px;
     width:421px;
 }
 
-/* = PLUGIN'S AUTHOR
+/* = Labels
 ================================================ */
-.mod-pedal-boxy{{{cns}}} .mod-plugin-brand {
-    left:0;
+.x42-autotune{{{cns}}} .x42-brand {
+    bottom: 50px;
+    cursor:default;
+    left: 40px;
     position:absolute;
-    right:0;
     text-align:center;
-    text-transform:uppercase;
-    top:160px;
+    width: 25px;
 }
 
-.mod-pedal-boxy{{{cns}}} .mod-plugin-brand h1 {
-    border-color:#000;
-    border-radius:12px;
-    border-style:solid;
-    border-width:4px;
-    display:inline-block;
+.x42-autotune{{{cns}}} .x42-brand h1 {
+    color:#aaa;
     font-family:"Nexa";
-    font-size:32px;
-    padding:3px 9px 0;
+    font-size:28px;
+    margin:0;
+    padding:0;
+    text-shadow: -2px 2px 2px #444;
+    transform: rotate(270deg);
+        -webkit-transform: rotate(270deg);
 }
 
-
-/* = PLUGIN'S NAME
-================================================ */
-.mod-pedal-boxy{{{cns}}} .mod-plugin-name {
-    left:30px;
+.x42-autotune{{{cns}}} .x42-plugin-name {
+    bottom:48px;
     overflow:hidden;
     position:absolute;
-    right:30px;
+    right:38px;
     text-align:center;
-    top:340px;
+    text-shadow: 0 0 1px #ccc;
 }
 
-.mod-pedal-boxy{{{cns}}} .mod-plugin-name h1 {
+.x42-autotune{{{cns}}} .x42-plugin-name h1 {
     font-family:"Questrial";
     font-size:21px;
     line-height:1;
@@ -62,61 +54,58 @@
 
 /* = LIGHT ON/OFF
 ================================================ */
-.mod-pedal-boxy{{{cns}}} .mod-light {
+.x42-autotune{{{cns}}} .mod-light {
     background-position:center center;
     background-repeat:no-repeat;
+    bottom:95px;
     height:32px;
-    left:60px;
-    right:0;
+    left:20px;
     position:absolute;
-    bottom:75px;
+    right:20px;
 }
-
-.mod-pedal-boxy{{{cns}}}.mod-one-footswitch-presets .mod-light {
-  top:120px;
-}
-
 
 /* = FOOTSWITCH
 ================================================ */
-.mod-pedal-boxy{{{cns}}} .mod-footswitch {
+.x42-autotune{{{cns}}} .mod-footswitch {
     background-image:url(/resources/footswitch.png{{{ns}}});
     background-position:bottom center;
     background-repeat:no-repeat;
     background-size:auto 132px;
-    bottom: 60px;
+    bottom: 39px;
     cursor:pointer;
     height:66px;
-    left: 0;
+    left: 20px;
     margin: auto;
     position:absolute;
-    right: 60px;
+    right: 20px;
     width: 66px;
 }
-.mod-pedal-boxy{{{cns}}} .mod-footswitch.on {
-    background-position-y: top !important
+
+.x42-autotune{{{cns}}} .mod-footswitch.on {
+    background-position: top center !important;
 }
 
 
 /* = KNOBS
 ================================================ */
-.mod-pedal-boxy{{{cns}}} .mod-control-group {
-    margin:20px !important;
+.x42-autotune{{{cns}}} .mod-control-group {
+    margin:20px 20px 5px 20px !important;
     position:relative;
     text-align:center;
     z-index:30;
 }
-.mod-pedal-boxy{{{cns}}} .top {
+.x42-autotune{{{cns}}} .top {
     margin-top:0px !important;
 }
 
-.mod-pedal-boxy{{{cns}}} .mod-control-group .mod-knob {
+.x42-autotune{{{cns}}} .mod-control-group .mod-knob {
     overflow:hidden;
     position:relative;
 }
 
-.mod-pedal-boxy{{{cns}}} .mod-control-group .mod-knob > span.mod-knob-title {
-    bottom:0px;
+.x42-autotune{{{cns}}} .mod-control-group .mod-knob > span.mod-knob-title {
+    bottom:12px;
+    cursor:default;
     display:block;
     font-size:11px;
     font-weight:bold;
@@ -131,7 +120,17 @@
     text-transform:uppercase;
 }
 
-.mod-pedal-boxy{{{cns}}}.x42-autotune .mod-control-group .mod-knob .mod-knob-image {
+.x42-autotune{{{cns}}} .mod-control-group .mod-knob .mod-knob-value {
+    bottom:0px;
+    font-size:11px;
+    left:0;
+    line-height:1;
+    position:absolute;
+    right:0;
+    z-index:60;
+}
+
+.x42-autotune{{{cns}}} .mod-control-group .mod-knob .mod-knob-image {
     background-image:url(/resources/aluminium.png{{{ns}}});
     background-repeat:no-repeat;
     background-size:auto 60px;
@@ -140,32 +139,23 @@
     margin:0 auto;
 }
 
-.mod-pedal-boxy{{{cns}}}.x42-autotune .mod-control-group .mod-knob {
+.x42-autotune{{{cns}}} .mod-control-group .mod-knob {
     display:inline-block;
-    height:73px;
-		margin: 1px 5px;
+    height:88px;
+        margin: 1px 5px;
 }
 
 /* = ENUMERATED LIST
 ================================================ */
-.mod-pedal-boxy{{{cns}}} .mod-enumerated-group {
+.x42-autotune{{{cns}}} .mod-enumerated-group {
     height:31px;
-    margin:20px auto 0 !important;
+    margin:20px auto 5px auto !important;
     position:relative;
-    width:190px;
+    width:100px;
     z-index:35;
 }
 
-.mod-pedal-boxy{{{cns}}}.mod-three-knobs .mod-enumerated-group,
-.mod-pedal-boxy{{{cns}}}.x42-autotune .mod-enumerated-group {
-    margin-bottom:5px !important;
-}
-
-.mod-pedal-boxy{{{cns}}}.x42-autotune .mod-enumerated-group {
-    width:250px;
-}
-
-.mod-pedal-boxy{{{cns}}}.x42-autotune .mod-enumerated {
+.x42-autotune{{{cns}}} .mod-enumerated {
     background-image:url(/resources/dropdown-arrow-black.png{{{ns}}});
     background-position:right center;
     background-repeat:no-repeat;
@@ -176,118 +166,136 @@
     overflow:hidden;
     position:absolute;
     right:0;
-    text-align:left;
+    text-align:center;
 }
 
-.mod-pedal-boxy{{{cns}}} .mod-enumerated .mod-enumerated-selected {
+.x42-autotune{{{cns}}} .mod-enumerated .mod-enumerated-selected {
     background-color:rgba(0,0,0,.3);
     box-shadow:inset 0 0 4px rgba(0,0,0,.3);
     border-radius:4px;
     padding:3px 9px;
 }
 
-.mod-pedal-boxy{{{cns}}} .mod-enumerated .mod-enumerated-selected {
-    border-radius:4px 4px 0 0;
-}
-
-.mod-pedal-boxy{{{cns}}} .mod-enumerated .mod-enumerated-list {
-    display:none;
-    color:#fff;
-}
-
-.mod-pedal-boxy{{{cns}}} .mod-enumerated .mod-enumerated-list {
+.x42-autotune{{{cns}}} .mod-enumerated .mod-enumerated-list {
     background-color:rgba(0,0,0,.9);
+    color:#fff;
     display:none;
     height:115px;
     overflow:auto;
     position:relative;
 }
 
-.mod-pedal-boxy{{{cns}}} .mod-enumerated .mod-enumerated-list > div {
+.x42-autotune{{{cns}}} .mod-enumerated .mod-enumerated-list > div {
     padding:3px 9px;
 }
 
-.mod-pedal-boxy{{{cns}}} .mod-enumerated .mod-enumerated-list > div:hover {
+.x42-autotune{{{cns}}} .mod-enumerated .mod-enumerated-list > div:hover {
     background-color:rgba(255,255,255,.2);
     cursor:pointer;
 }
 
 /* = Piano
 ================================================ */
-
-.mod-pedal-boxy{{{cns}}}.x42-autotune .pianokeyboard {
-	background-color:black;
-	margin: 20px auto;
-	position:relative;
-	overflow:hidden;
-	padding:0 0 2px 3px;
-	width:368px;
+.x42-autotune{{{cns}}} .pianokeyboard {
+    background-color:black;
+    margin: 5px auto;
+    position:relative;
+    overflow:hidden;
+    padding:0 0 2px 3px;
+    width:368px;
 }
 
-.mod-pedal-boxy{{{cns}}}.x42-autotune .pianokeyboard .key {
-	float: left;
+.x42-autotune{{{cns}}} .pianokeyboard .key {
+    float: left;
+    box-shadow: 0 2px 2px 1px #999 inset;
 }
 
-.mod-pedal-boxy{{{cns}}}.x42-autotune .pianokeyboard .key-white {
-	background-color:#fff;
-	border-radius: 0 0 4px 4px;
-	height: 140px;
-	margin: 0 2px 2px 0;
-	position: relative;
-	width: 50px;
-	z-index:50;
-}
-.mod-pedal-boxy{{{cns}}}.x42-autotune .pianokeyboard .key-white.on {
-	background: #f4f3f3 none repeat scroll 0 0;
-	box-shadow: 2px 2px 3px #999 inset, -3px 2px 3px #999 inset;
+.x42-autotune{{{cns}}} .pianokeyboard .active,
+.x42-autotune{{{cns}}} .pianokeyboard .active:after {
+    background-image:url(/resources/active_note.png{{{ns}}});
+    background-position:center bottom 10px;
+    background-repeat:no-repeat;
 }
 
-.mod-pedal-boxy{{{cns}}}.x42-autotune .pianokeyboard .key-black {
-	width: 0px;
-	height: 91px;
-	margin: 0;
+.x42-autotune{{{cns}}} .pianokeyboard .active:after {
+    background-size:20px 20px;
+}
+
+.x42-autotune{{{cns}}} .pianokeyboard .key-black.off.midion::after,
+.x42-autotune{{{cns}}} .pianokeyboard .active.on:after {
+    background-position:center bottom 7px;
+}
+
+.x42-autotune{{{cns}}} .pianokeyboard .key-black.on.midioff::after {
+    background-position:center bottom 10px !important;
+}
+
+.x42-autotune{{{cns}}} .pianokeyboard .key-white {
+    background-color:#fff;
+    border-radius: 0 0 4px 4px;
+    height: 140px;
+    margin: 0 2px 2px 0;
+    position: relative;
+    width: 50px;
+    z-index:50;
+}
+
+.x42-autotune{{{cns}}} .pianokeyboard .key-white.on.midioff {
+    background-color:#fff;
+    box-shadow: 0 2px 2px 1px #999 inset;
+    top: 0px;
+}
+
+.x42-autotune{{{cns}}} .pianokeyboard .key-white.midion,
+.x42-autotune{{{cns}}} .pianokeyboard .key-white.on {
+    background-color: #efedee;
+    box-shadow: 2px 2px 3px 1px #999 inset, -3px 2px 3px 1px #999 inset;
+    top: -1px;
+}
+
+.x42-autotune{{{cns}}} .pianokeyboard .key-black {
+    width: 0;
+    margin: 0;
 }
 
 
-.mod-pedal-boxy{{{cns}}}.x42-autotune .pianokeyboard .key-black.on::after {
-	background-color:#000;
-	border-radius: 0 0 4px 4px;
-	box-shadow: 2px 2px 2px 2px #888;
-	content: "";
-	display: block;
-	height: 89px;
-	position: relative;
-	width: 32px;
-	left: -18px;
-	top: -2px;
-	z-index:51;
+.x42-autotune{{{cns}}} .pianokeyboard .key-black.off.midion:after,
+.x42-autotune{{{cns}}} .pianokeyboard .key-black.on::after {
+    background-color:#3c3c3c;
+    border-radius: 0 0 4px 4px;
+    box-shadow: -1px 0 1px 0 #666, 1px  0px 3px 0 #888, 0 5px 0 3px #000, 0px 3px 3px 1px #000 inset;
+    content: "";
+    display: block;
+    height: 84px;
+    position: relative;
+    width: 30px;
+    left: -16px;
+    top: -2px;
+    z-index:51;
 }
 
-.mod-pedal-boxy{{{cns}}}.x42-autotune .pianokeyboard .key-black.off::after {
-	background-color:#111;
-	border-radius: 0 0 4px 4px;
-	box-shadow: 2px 2px 0 #999;
-	content: "";
-	display: block;
-	height: 91px;
-	position: relative;
-	width: 32px;
-	left: -18px;
-	top: -2px;
-	z-index:51;
+.x42-autotune{{{cns}}} .pianokeyboard .key-black.on.midioff:after,
+.x42-autotune{{{cns}}} .pianokeyboard .key-black.off::after {
+    background-color:#444;
+    border-radius: 0 0 4px 4px;
+    box-shadow: -2px 1px 2px 0px #ddd, 1px 1px 0px 1px #444, 0 3px 0 3px #000, 2px 0px 3px 0px #999 inset, -3px 0px 3px 0px #333 inset;
+    content: "";
+    display: block;
+    height: 86px;
+    position: relative;
+    width: 30px;
+    left: -16px;
+    top: -2px;
+    z-index:51;
 }
 
 /* = COLORS
 ================================================ */
-
-
-.mod-pedal-boxy{{{cns}}}.x42-autotune h1,
-.mod-pedal-boxy{{{cns}}}.x42-autotune .mod-enumerated,
-.mod-pedal-boxy{{{cns}}}.x42-autotune .mod-control-group .mod-knob > span.mod-knob-title
-{
+.x42-autotune{{{cns}}} h1,
+.x42-autotune{{{cns}}} .mod-enumerated,
+.x42-autotune{{{cns}}} .mod-control-group .mod-knob > span.mod-knob-title {
     color:black;
 }
-.mod-pedal-boxy{{{cns}}}.x42-autotune h1
-{
+.x42-autotune{{{cns}}} h1 {
     border-color:black;
 }
