Fix midifilters bypass button Imported from https://github.com/x42/midifilter.lv2/commit/b276867c6131b41d0870ac4085d215659f6ebc74

--- a/plugins-fixed/midifilter.lv2/modgui/x42-style.css
+++ b/plugins-fixed/midifilter.lv2/modgui/x42-style.css
@@ -781,3 +781,8 @@
     height:240px;
     width:510px;
 }
+
+/* --- */
+.x42-midifilter{{{cns}}}.x42-midi-keyrange .mod-footswitch {
+    z-index:40;
+}
